# androidreverse

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
exporthook/src/main/cpp/: Android.mk  CMakeLists.txt  doHook.c  exporthook.c  exporthook.h  exportutil.c  hook_libc.c  hook_libc.h  hook_libc_arm.c
gothook/src/main/cpp/: CMakeLists.txt  Hello_Triangle.c  esUtil.c  hellojni.c  hook.c  main.c
hook/src/main/cpp/: CMakeLists.txt  epoll.c  epoll_arm.c  hellojni.c  hook.c  hook.h  util.c
hookzz/src/main/cpp/: CMakeLists.txt  hellojni.c  interceptor.c  native-lib.cpp
inject-2/: CMakeLists.txt  build.gradle  proguard-rules.pro
inject-2/src/main/: AndroidManifest.xml
inject-2/src/main/java/cn/syang2forever/androidinject/: ChildService.java  MainActivity.java
inject-2/src/main/java/com/android/inject/: ChildService.java  MainActivity.java  ShellUtils.java
inject-2/src/main/jni/: hello.c  log.h  self.c
inject-2/src/main/jni/inject/: inject.c
inject-2/src/main/jni/poison/: Android.mk  Application.mk  elf_utils.c  elf_utils.h  log.h  poison.c  ptrace_utils.c  ptrace_utils.h  tools.c  tools.h
inject-2/src/main/res/layout/: activity_main.xml
inject-2/src/main/res/values/: strings.xml
inject/src/main/cpp/: CMakeLists.txt  Hello_Triangle.c  android_native_app_glue.c  android_native_app_glue.h  esShader.c  esTransform.c  esUtil_Android.c  hellojni.c  inject.c  inject.h
inlinehook/src/main/cpp/: CMakeLists.txt  abort_message.h  andhook.c  andhook.h  callstack.c  callstack.h  eglexthook.c  eglhook.c  elf_common.h  elf_hooker.cpp  elf_hooker.h  elf_main.cpp  elf_module.cpp  elf_module.h  exporthook.c  exporthook.h  exportutil.c  gl2exthook.c  gleshook.c  hellojni.c  hellojni.h  hooklog.h  hookutils.c  hookutils.h  inlineHook.c  inlineHook.h  mylog.h  relocate.c  relocate.h  threadhook.c  vkhook.c
nativeutils/src/main/cpp/: CMakeLists.txt  hellojni.cc  hellojni.h  my_log.h
nativeutils/src/main/cpp/libbacktrace/: BacktraceCurrent.cpp
nativeutils/src/main/cpp/libunwind/include/: libunwind_i.h
nativeutils/src/main/cpp/libunwind/src/: elfxx.c
reverse/src/main/cpp/: CMakeLists.txt  hellojni.c  hellojni.cc  hellojni.h  load.cc  my_log.h  structreverse.cc  syscallstack.cc  syscallstack.h
reverse/src/main/cpp/lib/: CMakeLists.txt
reverse/src/main/cpp/utils/: CallStack.h
swathook/src/main/cpp/: CMakeLists.txt  DalvikMethodHook.cpp  JavaMethodHook.cpp  JavaMethodHook.h  com_swathook_HookUtils.h  common.h  dvm.h  hookutils.cpp
tcmalloc/src/main/cpp/: CMakeLists.txt  my_log.h  tcmalloctest.cc  tcmalloctest.h
tcmalloc/src/main/cpp/lib/: test_library.cpp
tcmalloc/src/main/cpp/mystl/: my__bit_reference  my__bsd_locale_fallbacks.h  my__config  my__debug  my__functional_base  my__hash_table  my__locale  my__mutex_base  my__nullptr  my__split_buffer  my__sso_allocator  my__std_stream  my__string  my__threading_support  my__tree  my__tuple  my_algorithm  my_any  my_array  my_atomic  my_bitset  my_cassert  my_cctype  my_cerrno  my_cfenv  my_cfloat  my_chrono  my_cinttypes  my_ciso646  my_climits  my_clocale  my_cmath  my_codecvt  my_complex  my_complex.h  my_condition_variable  my_csetjmp  my_csignal  my_cstdarg  my_cstdbool  (+73 more)
tcmalloc/src/main/cpp/mystl/experimental/: my__config  my__memory  my_algorithm  my_any  my_coroutine  my_dynarray  my_filesystem  my_functional  my_memory_resource  my_numeric  my_optional  my_propagate_const  my_string_view  my_type_traits
tcmalloc/src/main/cpp/mystl/ext/: my_hash_map  my_hash_set
tcmalloc/src/main/cpp/mystl/support/win32/: my_locale_win32.h
tcmalloc/src/main/cpp/tcmalloc/: config.h  getpc.h  heap-profile-table.cc  libc_override_gcc_and_weak.h  libc_override_osx.h  malloc_hook.cc  malloc_hook_mmap_linux.h  profiledata.cc  static_vars.cc  symbolize.cc  tcmalloc.cc
tcmalloc/src/main/cpp/tcmalloc/base/: linux_syscall_support.h
tcmalloc/src/main/cpp/tcmalloc/tests/: addressmap_unittest.cc  realloc_unittest.cc  tcmalloc_large_unittest.cc  tcmalloc_unittest.cc
valgrind/src/main/cpp/: CMakeLists.txt  tcmalloctest.cc  tcmalloctest.h
valgrind/src/main/cpp/lib/: library.cpp  library.hpp
valgrind/src/main/cpp/valgrind/: FAQ.txt  Makefile.in  Makefile.vex.in  build.sh  config.h  config.h.in  configure  valgrind.spec
valgrind/src/main/cpp/valgrind/autom4te.cache/: output.1  requests  traces.0  traces.1
valgrind/src/main/cpp/valgrind/auxprogs/: Makefile.in
valgrind/src/main/cpp/valgrind/cachegrind/: Makefile.in
valgrind/src/main/cpp/valgrind/cachegrind/tests/: Makefile.in
valgrind/src/main/cpp/valgrind/callgrind/: Makefile.in
valgrind/src/main/cpp/valgrind/callgrind/tests/: Makefile.in
valgrind/src/main/cpp/valgrind/coregrind/: Makefile.in
valgrind/src/main/cpp/valgrind/coregrind/m_coredump/: coredump-elf.c
valgrind/src/main/cpp/valgrind/dhat/: Makefile.in
valgrind/src/main/cpp/valgrind/dhat/tests/: Makefile.in
valgrind/src/main/cpp/valgrind/docs/: Makefile.in  callgrind_annotate.1  callgrind_control.1  cg_annotate.1  cg_diff.1  cg_merge.1  ms_print.1  valgrind-di-server.1  valgrind-listener.1  valgrind.1  vgdb.1
valgrind/src/main/cpp/valgrind/docs/html/: QuickStart.html  bbv-manual.html  cg-manual.html  cl-manual.html  dh-manual.html  dist.html  (+20 more)
valgrind/src/main/cpp/valgrind/drd/: Makefile.in
valgrind/src/main/cpp/valgrind/exp-bbv/: Makefile.in
valgrind/src/main/cpp/valgrind/exp-sgcheck/: Makefile.in
valgrind/src/main/cpp/valgrind/gdbserver_tests/: Makefile.in
valgrind/src/main/cpp/valgrind/helgrind/: Makefile.in
valgrind/src/main/cpp/valgrind/include/: Makefile.in  vgversion_dist.h
valgrind/src/main/cpp/valgrind/lackey/: Makefile.in
valgrind/src/main/cpp/valgrind/massif/: Makefile.in
valgrind/src/main/cpp/valgrind/memcheck/: Makefile.in
valgrind/src/main/cpp/valgrind/mpi/: Makefile.in
valgrind/src/main/cpp/valgrind/none/: Makefile.in
valgrind/src/main/cpp/valgrind/perf/: Makefile.in  vg_perf
valgrind/src/main/cpp/valgrind/shared/: Makefile.in
valgrind/src/main/cpp/valgrind/solaris/: Makefile.in
valgrind/src/main/cpp/valgrind/tests/: Makefile.in
(+696 files in other folders)
